Cleaned up view imports